--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -34,3 +34,24 @@ jobs:
     - name: "Build command"
       run: npm run build --if-present
       
+
+
+  deploy:
+    name: 🚀 Deploy to Vercel
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: 📦 Checkout code
+        uses: actions/checkout@v3
+
+      - name: 🔧 Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '18'
+
+      - name: 📥 Install dependencies
+        run: npm install
+
+      - name: 🚀 Deploy with Vercel
+        run: npx vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
