--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -31,6 +31,8 @@ jobs:
         cache: 'npm'
     - name: "installing Dependencies"   
       run: npm i
+    - name: "Run linter"
+      run: npm run lint
     - name: "Build command"
       run: npm run build --if-present
       
@@ -52,6 +54,9 @@ jobs:
 
       - name: 📥 Install dependencies
         run: npm install
+      # Lint before deploy
+      - name: "Run linter"
+        run: npm run lint
 
       - name: 🚀 Deploy with Vercel
         run: npx vercel --prod --token=${{ secrets.VERCEL_TOKEN }}
